# ChangeLog for sci-visualization/gnuplot
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.243 2014/05/15 20:04:52 maekke Exp $

  15 May 2014; Markus Meier <maekke@gentoo.org> gnuplot-4.6.4-r2.ebuild:
  arm stable, bug #508218

*gnuplot-4.6.5 (12 May 2014)

  12 May 2014; Christoph Junghans <ottxor@gentoo.org> +gnuplot-4.6.5.ebuild:
  version bump, fix double install of manual

  25 Apr 2014; Jeroen Roovers <jer@gentoo.org> gnuplot-4.6.4-r2.ebuild:
  Stable for HPPA (bug #508218).

  20 Apr 2014; Ulrich Müller <ulm@gentoo.org> gnuplot-4.6.4-r2.ebuild:
  Restore keywords for remaining architectures.

  02 Apr 2014; Christoph Junghans <ottxor@gentoo.org> gnuplot-4.6.4-r2.ebuild:
  re-added prefix keywords

  01 Apr 2014; Markus Meier <maekke@gentoo.org> gnuplot-4.6.4-r1.ebuild:
  arm stable, bug #505326

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> gnuplot-4.6.4-r2.ebuild:
  Marked ~hppa (bug #505378).

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> gnuplot-4.6.4-r1.ebuild:
  Stable for HPPA (bug #505326).

*gnuplot-4.6.4-r2 (23 Mar 2014)

  23 Mar 2014; Ulrich Müller <ulm@gentoo.org> +gnuplot-4.6.4-r2.ebuild:
  Drop emacs and xemacs USE flags because gnuplot-mode for Emacs is now
  maintained and distributed separately, bug 504354. For Emacs support,
  app-emacs/gnuplot-mode should be installed. KEYWORDS dropped to those
  of gnuplot-mode; they will be readded later.

  22 Mar 2014; Ulrich Müller <ulm@gentoo.org> gnuplot-4.6.4-r1.ebuild:
  Install the GNU Info file with doinfo, as the install-info make target does
  not work with USE=-emacs.

  21 Mar 2014; Ulrich Müller <ulm@gentoo.org> -files/gnuplot-4.4.4-tikz.patch:
  Remove unused patch.

*gnuplot-4.6.4-r1 (21 Mar 2014)

  21 Mar 2014; Ulrich Müller <ulm@gentoo.org> -gnuplot-4.6.4.ebuild,
  +gnuplot-4.6.4-r1.ebuild:
  Add an explicit install-info target to install the GNU Info file; since