@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm prepare test
-DEPEND=cairo? ( x11-libs/cairo x11-libs/pango ) emacs? ( virtual/emacs ) !emacs? ( xemacs? ( app-editors/xemacs app-xemacs/xemacs-base ) ) gd? ( >=media-libs/gd-2.0.35-r3[png] ) ggi? ( media-libs/libggi ) latex? ( virtual/latex-base lua? ( dev-tex/pgf >=dev-texlive/texlive-latexrecommended-2008-r2 ) ) lua? ( dev-lang/lua ) plotutils? ( media-libs/plotutils ) qt4? ( >=dev-qt/qtcore-4.5:4 >=dev-qt/qtgui-4.5:4 >=dev-qt/qtsvg-4.5:4 ) readline? ( sys-libs/readline ) svga? ( media-libs/svgalib ) wxwidgets? ( x11-libs/wxGTK:2.8[X] x11-libs/cairo x11-libs/pango x11-libs/gtk+:2 ) X? ( x11-libs/libXaw ) virtual/pkgconfig doc? ( virtual/latex-base dev-texlive/texlive-latexextra app-text/ghostscript-gpl ) !emacs? ( xemacs? ( app-xemacs/texinfo ) )
-DESCRIPTION=Command-line driven interactive plotting program
-EAPI=5
-HOMEPAGE=http://www.gnuplot.info/
-IUSE=aqua bitmap cairo doc emacs examples +gd ggi latex lua plotutils qt4 readline svga thin-splines wxwidgets X xemacs
-KEYWORDS=~alpha ~amd64 arm hppa ~ia64 ~ppc ~ppc64 ~s390 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
-LICENSE=gnuplot GPL-2+ bitmap? ( free-noncomm )
-RDEPEND=cairo? ( x11-libs/cairo x11-libs/pango ) emacs? ( virtual/emacs ) !emacs? ( xemacs? ( app-editors/xemacs app-xemacs/xemacs-base ) ) gd? ( >=media-libs/gd-2.0.35-r3[png] ) ggi? ( media-libs/libggi ) latex? ( virtual/latex-base lua? ( dev-tex/pgf >=dev-texlive/texlive-latexrecommended-2008-r2 ) ) lua? ( dev-lang/lua ) plotutils? ( media-libs/plotutils ) qt4? ( >=dev-qt/qtcore-4.5:4 >=dev-qt/qtgui-4.5:4 >=dev-qt/qtsvg-4.5:4 ) readline? ( sys-libs/readline ) svga? ( media-libs/svgalib ) wxwidgets? ( x11-libs/wxGTK:2.8[X] x11-libs/cairo x11-libs/pango x11-libs/gtk+:2 ) X? ( x11-libs/libXaw )
-SLOT=0
-SRC_URI=mirror://sourceforge/gnuplot/gnuplot-4.6.4.tar.gz mirror://gentoo/gnuplot.info-4.6.2.tar.xz
-_eclasses_=elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	readme.gentoo	be2652cdd5c20f4689ccb4769072ea99	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	wxwidgets	6d6eec2685256d35511e7b6d5461bec9
-_md5_=22601c94d3d0e96af8e90be3c46c9ef8
