@@ -1,6 +1,9 @@
 # ChangeLog for sci-visualization/gnuplot
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.243 2014/05/15 20:04:52 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.244 2014/05/15 20:34:30 ulm Exp $
+
+  15 May 2014; Ulrich Müller <ulm@gentoo.org> -gnuplot-4.6.4-r1.ebuild:
+  Remove old.
 
   15 May 2014; Markus Meier <maekke@gentoo.org> gnuplot-4.6.4-r2.ebuild:
   arm stable, bug #508218
